--- a/src/components/BeerListBeer/BeerListBeer.css
+++ b/src/components/BeerListBeer/BeerListBeer.css
@@ -1,8 +1,9 @@
 .BeerListBeer {
-    display: inline-flex;
+    display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
-    
+    gap: 5vmin;
+    padding: 5px;
+    margin: 2vmin;
   }
   
