--- a/src/pages/BeerListPage/BeerListPage.css
+++ b/src/pages/BeerListPage/BeerListPage.css
@@ -1,15 +1,18 @@
 .BeerListPage {
   height: 100%;
-  display: grid;
-  grid-template-columns: 3.5fr;
-  grid-template-rows: 1fr;
-
+  display: flexbox;
 }
 
-.BeerListPage div {
+aside {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
- 
+  width: 20%;
+  padding-left: 0.2rem;
+  margin-left: 0.2rem;
+  float: left;
+  box-shadow: inset 5px 0 5px -5px #29627e;
+  font-style: italic;
+  color: #29627e;
 }
