--- a/src/pages/FlashCardPage/FlashCardPage.css
+++ b/src/pages/FlashCardPage/FlashCardPage.css
@@ -1,8 +1,7 @@
-.MyBeerListPage {
-    padding: 4rem;
+.flashcardpage {
+    padding: 2rem;
     margin: 1vmax;
     box-shadow: inset 5px 0 5px -5px #29627e;
     font-style: italic;
     color: #203d4b;
 }
- 
