--- a/src/pages/BeerListPage/BeerListPage.css
+++ b/src/pages/BeerListPage/BeerListPage.css
@@ -1,6 +1,7 @@
 .BeerListPage {
   height: 100%;
   display: flexbox;
+  max-height: fit-content;
 }
 
 aside {
@@ -15,4 +16,5 @@ aside {
   box-shadow: inset 5px 0 5px -5px #29627e;
   font-style: italic;
   color: #29627e;
+  
 }
