--- a/src/pages/BeerListPage/BeerListPage.css
+++ b/src/pages/BeerListPage/BeerListPage.css
@@ -15,6 +15,7 @@ aside {
   float: left;
   box-shadow: inset 5px 0 5px -5px #29627e;
   font-style: italic;
-  color: #29627e;
+  font-weight: bolder;
+  color: #023e47;
   
 }
