--- a/src/pages/MyBeerListPage/MyBeerListPage.css
+++ b/src/pages/MyBeerListPage/MyBeerListPage.css
@@ -3,6 +3,7 @@
     margin: 1vmax;
     box-shadow: inset 5px 0 5px -5px #29627e;
     font-style: italic;
+    font-size: larger;
     color: #203d4b;
 }
  
