Polish, Add Favicon  and Finish README

--- a/src/components/BeerCard/BeerCard.css
+++ b/src/components/BeerCard/BeerCard.css
@@ -12,7 +12,7 @@
 p {
     display: grid;
     grid-template-columns: 0.5fr 2fr;
-    color: beige;
+    color: rgb(74, 148, 143);
     font-weight:bolder;
     font-size: 20px;
 }
