--- a/src/components/NewBeerForm/NewBeerForm.css
+++ b/src/components/NewBeerForm/NewBeerForm.css
@@ -1,11 +1,4 @@
-.newbeerform {
-    /* display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
-}
-
 .button {
     height: 50px;
-    width: 100px;
+    width: 20%;
 }
